--- a/css/index.css
+++ b/css/index.css
@@ -1,66 +1,56 @@
 body {
-    background: linear-gradient(314deg, #3b90e3, #dfe33b);
+    width: 100wh;
+    height: 90vh;
+    color: #fff;
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     background-size: 400% 400%;
-    -webkit-animation: AnimationName 21s ease infinite;
-    -moz-animation: AnimationName 21s ease infinite;
-    -o-animation: AnimationName 21s ease infinite;
-    animation: AnimationName 21s ease infinite;
-    @-webkit-keyframes AnimationName {
-        0% {
-            background-position: 11% 0%
-        }
-        50% {
-            background-position: 90% 100%
-        }
-        100% {
-            background-position: 11% 0%
-        }
+    -webkit-animation: Gradient 15s ease infinite;
+    -moz-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+    0% {
+        background-position: 0% 50%
     }
-    @-moz-keyframes AnimationName {
-        0% {
-            background-position: 11% 0%
-        }
-        50% {
-            background-position: 90% 100%
-        }
-        100% {
-            background-position: 11% 0%
-        }
+    50% {
+        background-position: 100% 50%
     }
-    @-o-keyframes AnimationName {
-        0% {
-            background-position: 11% 0%
-        }
-        50% {
-            background-position: 90% 100%
-        }
-        100% {
-            background-position: 11% 0%
-        }
-    }
-    @keyframes AnimationName {
-        0% {
-            background-position: 11% 0%
-        }
-        50% {
-            background-position: 90% 100%
-        }
-        100% {
-            background-position: 11% 0%
-        }
+    100% {
+        background-position: 0% 50%
     }
 }
 
-div {
-    height: 100%;
-    width: 100%;
+@-moz-keyframes Gradient {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@keyframes Gradient {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
 
 h1 {
-    font-family: sans-serif;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    font-family: 'Open Sans';
+	font-weight: 300;
+	text-align: center;
+	position: absolute;
+	top: 40%;
+	right: 0;
+	left: 0;
 }
