--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 body {
-    width: 100wh;
-    height: 90vh;
     color: #fff;
     background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     background-size: 400% 400%;
     -webkit-animation: Gradient 15s ease infinite;
     -moz-animation: Gradient 15s ease infinite;
     animation: Gradient 15s ease infinite;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @-webkit-keyframes Gradient {
@@ -53,4 +53,11 @@ h1 {
 	top: 40%;
 	right: 0;
 	left: 0;
+}
+
+canvas {
+    display: block;
+    top: 0%;
+    left: 0%;
+    margin: 0px auto auto 0px;
 }
