--- a/css/index.css
+++ b/css/index.css
@@ -47,12 +47,14 @@ body {
 
 h1 {
     font-family: 'Open Sans';
-	font-weight: 300;
+    font-weight: 100;
+	font-size: 200%;
 	text-align: center;
 	position: absolute;
 	top: 40%;
 	right: 0;
 	left: 0;
+    user-select: none;
 }
 
 canvas {
